# trilliant-data-science

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md
libs/adls/: CHANGES.md  Pipfile  README.md  pyproject.toml  setup.py
libs/adls/.projectconf/: .pre-commit-config.yaml
libs/adls/docs/: adls-4-0.md
libs/adls/docs/blake3/: README.md  benchmark_32_core.md  benchmark_hash_algos.py  benchmark_mac.md
libs/adls/scripts/: clean_cache.py  vtmp_container.py
libs/adls/src/thds/adls/: __init__.py  _env.py  _etag.py  _fork_protector.py  _progress.py  _timing.py  _upload.py  abfss.py  blake_hash.py  blob_meta.py  blobs.py  cached.py  cached_up_down.py  conf.py  copy.py  dbfs.py  defaults.py  download.py  download_lock.py  errors.py  etag.py  file_lock.py  file_properties.py  fqn.py  global_client.py  hashes.py  impl.py  link.py  list_fast.py  md5.py  named_roots.py  resource.py  ro_cache.py  sas_tokens.py  shared_credential.py  source.py  source_tree.py  upload.py  uri.py
libs/adls/tests/data/: hello_world.txt
libs/adls/tests/test_adls/: conftest.py  test_abfss.py  test_adls.py  test_copy.py  test_defaults.py  test_download.py  test_etag.py  test_etag_integration.py  test_fork_protector.py  test_fqn.py  test_hashes.py  test_list_fast.py  test_progress.py  test_resource.py  test_ro_cache.py  test_source.py  test_upload.py
libs/atacama/: CHANGES.md  README.md  pyproject.toml  setup.py
libs/atacama/.projectconf/: .pre-commit-config.yaml
libs/atacama/src/thds/atacama/: LICENSE_desert.md  __init__.py  _attrs.py  _cache.py  _config.py  _generic_dispatch.py  _meta.py  _registry.py  _typevars.py  custom_fields.py  field_transforms.py  fields.py  generators.py  leaf.py  nonempty.py  schemas.py
libs/atacama/tests/test_atacama/: __init__.py  test_caching.py  test_config.py  test_custom_fields.py  test_fields.py  test_gen.py  test_leaf.py  test_optional.py  test_smores.py  test_unions.py
libs/attrs-utils/: CHANGES.md  README.md  pyproject.toml  setup.py
libs/attrs-utils/src/thds/attrs_utils/: __init__.py  defaults.py  docs.py  empty.py  recursion.py  registry.py  type_cache.py  type_recursion.py  type_utils.py  (+1 more)
libs/attrs-utils/tests/attrs_utils/: conftest.py  test_defaults.py  test_docs.py  test_empty.py  test_init.py  test_jsonschema.py  test_recursion.py  test_type_utils.py
libs/core/: CHANGES.md  Pipfile  README.md  build.py  pyproject.toml  setup.py
libs/core/.projectconf/: .pre-commit-config.yaml
libs/core/scripts/: demo_logs.py  die.py
libs/core/tests/test_core/: conftest.py  test_cache.py  test_calgitver.py  test_concurrency.py  test_config.py  test_decos.py  test_dict_utils.py  test_env.py  test_example.py  test_files.py  test_fp.py  test_fretry.py  test_futures.py  test_generators.py  test_git.py  test_hash_cache.py  test_hashing.py  test_imports.py  test_iterutils.py  test_journalist.py  test_lazy.py  test_link.py  test_log.py  test_log_json.py  test_logical_root.py  test_meta.py  test_parallel.py  test_partition.py  test_progress.py  test_reentrant_bounded_semaphore.py  test_refcount.py  test_scope.py  test_source.py  test_source_tree.py  test_sqlite.py  test_sqlite_upsert.py  test_timer.py  test_tmp.py  test_uri_assign.py  test_version_import.py
libs/core/tests/tests_core/: test_meta.py
libs/gent/: BARE_SETUP.md  CHANGES.md  README.md  check_install_location.py  install.sh  pyproject.toml
libs/gent/docs/: DEVELOPING.md
libs/gent/tests/: conftest.py
libs/gent/tests/test_gent/: test_check_install_location.py  test_clone.py  test_completion.py  test_init.py  test_readme.py  test_repo.py  test_setup_shell.py  test_utils.py  test_worktree.py
libs/humenc/: CHANGES.md  README.md  pyproject.toml  setup.py
libs/humenc/tests/test_humenc/: test_humenc.py  test_temporal.py
libs/mllegos/: README.md  pyproject.toml
libs/mllegos/notebooks/: sklearn_classification_report_tools.ipynb
libs/mllegos/tests/test_mllegos/: test_init.py
libs/mops/: .gitignore  CHANGES.md  Pipfile  README.adoc  README.md  pyproject.toml  setup.py
libs/mops/.projectconf/: .pre-commit-config.yaml
libs/mops/docs/: README.md  advanced_memoization.adoc  advanced_memoization.md  basic_usage.adoc  basic_usage.md  calls.adoc  concepts.adoc  config.adoc  config.md  debugging.adoc  debugging.md  fibonacci.py  invocation_locks.adoc  invocation_locks.md  kubernetes.adoc  kubernetes.md  limitations.adoc  limitations.md  magic.adoc  memoization.adoc  memoization.md  optimizations.adoc  optimizations.md  orchestrator.adoc  orchestrator.md  paths.adoc  paths.md  pipeline-ids.adoc  pure_functions.adoc  pure_functions.md  pypi_readme.md  quickstart.adoc  remote.adoc  remote.md  serialization.adoc  serialization.md  shims.adoc  source.adoc  src_dest_files.md  storage_tiers.adoc  (+1 more)
libs/mops/examples/: impure.py  stress_test.py  toy.py
libs/mops/scripts/: draw-dag.py  invalidate.py  port-v1-srcfiles.py  render_echart.py  stress-test-lock.py  test-local-adls-upload.py
libs/mops/tests/: conftest.py
libs/mops/tests/test_mops/: config.py  conftest.py
libs/tabularasa/: .gitignore  CHANGES.md  README.md  pyproject.toml  setup.py
libs/tabularasa/.projectconf/: .pre-commit-config.yaml
libs/tabularasa/tests/data/: array_attrs.py_  array_index.sql  array_pandas.py_  array_schema.yml  array_table.sql  arrays.csv  bool_attrs.py_  bool_pandas.py_  bool_schema.yml  bool_table.sql  bools.csv  date_attrs.py_  date_index.sql  date_pandas.py_  date_schema.yml  date_table.sql  dates.tsv  dependency_attrs.py_  dependency_fibonaccis.csv  dependency_index.sql  dependency_pandas.py_  dependency_schema.yml  dependency_squares.csv  dependency_table.sql  int_attrs.py_  int_index.sql  int_pandas.py_  int_schema.yml  int_table.sql  ints.csv  mapping_attrs.py_  mapping_index.sql  mapping_pandas.py_  mapping_schema.yml  mapping_table.sql  mappings.csv  mappings_nested.csv  string_attrs.py_  string_index.sql  string_pandas.py_  (+12 more)
libs/tabularasa/tests/tabularasa/: conftest.py
libs/termtool/: README.md  pyproject.toml
libs/termtool/tests/test_termtool/: test_colors.py  test_init.py
(+566 files in other folders)
