[tool.poetry]
name = "thds.adls"
version = "2.5"
# Patch version is a datetime determined upon release
description = "ADLS tools"
authors = ["Trilliant Health"]
readme = "README.md"
packages = [{include = "thds", from="src"}]
include = ["py.typed", "meta.json"]

[tool.poetry.dependencies]
python = "^3.8"

aiohttp = ">=3.8.1"
aiostream = ">=0.4.5"
azure-identity = ">=1.9"
azure-storage-file-datalake = ">=12.6"
filelock = ">=3.0"

thds-core = {path = "../../libs/core", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "1.11"
mypy-extensions = "^1.0"
pytest = "^7.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-xdist = "^3.3.1"
types-requests = "^2.32.0.20241016"

[tool.poetry.scripts]
adls-download-uri = "thds.adls.tools.download:main"
adls-ls-uri = "thds.adls.tools.ls:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.adls"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aiostream",
    "azure",
    "setuptools",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# temporary fix for mypy error: Function has duplicate type signatures
# related issue: https://github.com/Azure/azure-sdk-for-python/issues/21223
module = ["azure.storage.filedatalake.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/TrilliantHealth/ds-monorepo"

# TOOLING CONFIG
