[project]
name = "thds.adls"
version = "4.5"
# Patch version is a datetime determined upon release
description = "ADLS tools"
readme = "README.md"
authors = [{name = "Trilliant Health", email = "info@trillianthealth.com"}]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.1",
    "aiostream>=0.4.5",
    "azure-identity>=1.9",
    "azure-storage-file-datalake>=12.6",
    "blake3",  # we're going to use this for hashes from now on - it can work in parallel and is blazing fast.
    "filelock>=3.0",
	"xxhash",
    "thds-core",
]

[project.scripts]
adls-download-uri = "thds.adls.tools.download:main"
adls-ls-uri = "thds.adls.tools.ls:main"
adls-upload-uri = "thds.adls.tools.upload:main"
adls-ls-fast-uri = "thds.adls.tools.ls_fast:main"

[project.urls]
Repository = "https://github.com/TrilliantHealth/trilliant-data-science"

[dependency-groups]
dev = [
    "mypy~=1.14.0",
    "mypy-extensions~=1.0",
    "pytest~=7.2",
    "pytest-asyncio~=0.21",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
    "pytest-rerunfailures",
    "pytest-xdist>=3.3.1,<4.0.0",
    "types-requests",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
thds-core = { path = "../../libs/core", editable = true }

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.adls"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["azure"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
