[project]
name = "thds.atacama"
version = "1.2"
description = "A Marshmallow schema generator for `attrs` classes. Inspired by `desert`."
readme = "README.md"
authors = [{name = "Trilliant Health", email = "info@trillianthealth.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "attrs>=22.2.0",
    "marshmallow>=3.1",
    "marshmallow-enum",
    "marshmallow-union",
    "thds-core",
    "typing-inspect>=0.9",
]

[project.urls]
Repository = "https://github.com/TrilliantHealth/trilliant-data-science"

[dependency-groups]
dev = [
    "mypy~=1.11.0",
    "mypy-extensions~=1.0",
    "pytest~=7.2",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
thds-core = { path = "../../libs/core", editable = true}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.atacama"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "marshmallow_enum",
    "typing_inspect",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
