[tool.poetry]
name = "thds.core"
# Patch version is a datetime determined upon release
version = "1.19"
authors = ["Trilliant Health"]
description = "Core utilities."
readme = "README.md"
packages = [{include = "thds", from="src"}]
include = ["py.typed", "meta.json"]

[tool.poetry.dependencies]
python = "^3.8"

attrs = ">=22.2.0"
cattrs = ">=22.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0"
mypy-extensions = "^1.0"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"

[tool.poetry.scripts]
new-calgitver = "thds.core.meta:print_calgitver"
show-thds-config = "thds.core.config:show_config_cli"
thds-exit-after = "thds.core.exit_after:main"

[build-system]
requires = ["poetry-core", "attrs>=22.2.0", "cattrs>=22.2"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/TrilliantHealth/ds-monorepo"

# TOOLING CONFIG
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.core"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
