[project]
name = "thds.core"
# Patch version is a datetime determined upon release
version = "1.33"
description = "Core utilities."
readme = "README.md"
authors = [{name = "Trilliant Health", email = "info@trillianthealth.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "attrs>=22.2.0",
    "cattrs>=22.2.0",
    "setuptools",
    # setuptools is no longer included in Python >= 3.12 venvs by default,
    # and `uv` does not include `setuptools`, (or `pip` for that matter), in any project venvs
    # however much of the Python ecosystem (Pycharm, various packages, etc.)
    # still expects `setuptools` to be present in any given venv.
    # this is the most central place to require setuptools even though `thds-core` itself doesn't need it :/
    # at some point we will hopefully be able to remove this
    "typing-extensions",
]

[project.scripts]
new-calgitver = "thds.core.meta:print_calgitver"
show-thds-config = "thds.core.config:show_config_cli"
thds-exit-after = "thds.core.exit_after:main"

[project.urls]
Repository = "https://github.com/TrilliantHealth/trilliant-data-science"

[dependency-groups]
dev= [
    "mypy~=1.11.0",
    "mypy-extensions~=1.0",
    "pytest~=7.2",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.core"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
