[project]
name = "thds.gent"
version = "1.3"
# Patch version is a datetime determined upon release.
description = "Git worktree management utilities - tree shepherds for your working trees"
readme = "README.md"
authors = [{name = "Trilliant Health", email = "info@trillianthealth.com"}]
requires-python = ">=3.10"
dependencies = [
    "argh>=0.31.0",
    "rich>=13.0.0",
    "thds.core",
]

#################
# Runtime dependencies should have as low a bound as the library can
# handle, and generally should have no upper bound unless actual
# breakage is found, since that allows applications and other
# libraries maximum flexibility.
#################


[project.scripts]
wt = "thds.gent.__main__:main"
wt-completion = "thds.gent.completion:main"

[project.urls]
repository = "https://github.com/TrilliantHealth/trilliant-data-science"

[dependency-groups]
dev = [
    "mypy~=1.14",
    "mypy-extensions~=1.0",
    "pytest~=8.2",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
    "xonsh>=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"thds.gent" = ["shell/*"]

# TOOLING CONFIG
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.gent"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
# in the main project code, we should have nothing without full type annotations.
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "azure",
    "google",
    "ruamel.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# we are not as strict about untyped things in tests, though projects should feel free to
# make these overrides more targeted to keep test readability high.
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
# do not run integration test by default, but CI will pick it up
addopts = "-m 'not integration'"
markers = ["integration"]
testpaths = ["tests"]
