[project]
name = "thds.humenc"
version = "1.1"
# Patch version is a datetime determined upon release
description = "Binary to string encoding for human readers."
readme = "README.md"
authors = [{name = "Trilliant Health", email = "info@trillianthealth.com"}]
requires-python = ">=3.9"
dependencies = [
    "thds-core",
    "wordybin>=0.2.0"
]

[project.urls]
Repository = "https://github.com/TrilliantHealth/ds-monorepo"

[dependency-groups]
dev = [
    "mypy~=1.11.0",
    "mypy-extensions~=1.0",
    "pytest~=7.2",
    "pytest-cov~=4.0",
    "pytest-mock~=3.10",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
thds-core = { path = "../../libs/core", editable = true }

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.humenc"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true

[tool.pytest.ini_options]
# do not run integration test by default, but CI will pick it up
addopts = "-m 'not integration'"
markers = ["integration"]
testpaths = ["tests"]
