[tool.poetry]
name = "thds.mops"
# Patch version is a datetime determined upon release
version = "1.3"
description = "ML Ops tools for Trilliant Health"
authors = ["Trilliant Health"]
readme = "README.md"
packages = [{include = "thds", from="src"}]
include = [
    "py.typed",
    "meta.json",
    "*_config.toml",
    "*.yml.template",
    "*.sh",
]

# PROJECT ENTRY POINTS
[tool.poetry.scripts]
mops-exit-after = "thds.mops.k8s.orchestrator.exit_after:main"
krsync = "thds.mops.k8s.orchestrator.krsync:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
azure-core = "*"
azure-identity = "*"
azure-storage-blob = "*"
adal = "*"  # this is necessary for K8S Azure authentication refresh.
pyyaml = "*"
retry = "*"  # i can probably get rid of this one soon
kubernetes = ">=18.20"  # 22.6 is the best match for current clusters
ansicolors = "*"
cachetools = "*"
tomli = "*"
lazy_object_proxy = "*"
thds-adls = { path="../../libs/adls", develop=true }
thds-core = { path="../../libs/core", develop=true }

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
mypy-extensions = "*"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
types-cachetools = "*"
types-retry = "*"
types-urllib3 = "*"

# BUILD CONFIG
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/TrilliantHealth/ds-monorepo"

# TOOLING CONFIG
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.mops"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = 3.8
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info
)'''
check_untyped_defs = true


[[tool.mypy.overrides]]
module = ["azure.*", "colors", "kubernetes.*", "lazy_object_proxy", "setuptools"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# temporary fix for mypy error: Function has duplicate type signatures
# related issue: https://github.com/Azure/azure-sdk-for-python/issues/21223
module = ["azure.storage.filedatalake.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
