[tool.poetry]
name = "thds.mops"
# Patch version is a datetime determined upon release
version = "3.6"
description = "ML Ops tools for Trilliant Health"
authors = ["Trilliant Health"]
readme = "docs/pypi_readme.md"
packages = [{include = "thds", from="src"}]
include = [
    "py.typed",
    "meta.json",
    "*_config.toml",
    "*.yml.template",
    "*.sh",
]

# PROJECT ENTRY POINTS
[tool.poetry.scripts]
krsync = "thds.mops.k8s.orchestrator.krsync:main"
mops-k8s-ns = "thds.mops.k8s.namespace:main"
mops-exit-after = "thds.core.exit_after:main"
mops-human-sha256b64 = "thds.mops.pure.tools.sha256_b64_addressed:main"
mops-inspect = 'thds.mops.pure.tools.inspect:main'
mops-summarize = 'thds.mops.pure.tools.summarize.cli:main'

[tool.poetry.dependencies]
python = "^3.8"

ansicolors = "*"
azure-core = "*"
azure-identity = "*"
azure-storage-file-datalake = "*"
# TODO make azure-* an extra; it's not _truly_ required except by our import structure.
cachetools = "*"
tomli = "*"

thds-adls = { path = "../../libs/adls", develop = true }
thds-core = { path = "../../libs/core", develop = true }
thds-humenc = { path = "../../libs/humenc", develop = true }

# k8s is extra - there are other shims you can use with mops.pure.magic
kubernetes = {version = ">=18.20", optional = true}  # 22.6 is the best match for current clusters
tblib = "^2.0.0"

[tool.poetry.extras]
k8s = ["kubernetes"]

[tool.poetry.group.dev.dependencies]
mypy = "1.11"
mypy-extensions = "^1.0"
pytest = "^7.2"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-xdist = "^3.3.1"
types-cachetools = "*"
types-urllib3 = "*"

# BUILD CONFIG

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.mops"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "azure",
    "azure.*",
    "colors",
    "google.*",
    "kubernetes.*",
    "setuptools",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# temporary fix for mypy error: Function has duplicate type signatures
# related issue: https://github.com/Azure/azure-sdk-for-python/issues/21223
module = ["azure.storage.filedatalake.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
# we are not as strict about untyped things in tests, though projects should feel free to
# make these overrides more targeted to keep test readability high.
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests/test_mops"]
addopts = "-v -s"
markers = ["integration"]

[build-system]
requires = ["poetry-core<2.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/TrilliantHealth/ds-monorepo"

# TOOLING CONFIG
