[tool.poetry]
name = "thds.tabularasa"
# Patch version is a datetime determined upon release
version = "0.0"
authors = ["Trilliant Health"]
description = "Trillant Health reference data build system."
readme = "README.md"
packages = [{include = "thds", from = "src"}]
include = ["meta.json", "py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
attrs = ">=22.2.0"
cattrs = ">=22.2.0"
networkx = ">=3.0"
numpy = "*"
pandas = "^1.4"
pydantic = "^1.10.0"  # V2 introduces breaking changes
pyarrow = ">=10.0.0"
pyyaml = ">=6.0.1"
setuptools = ">=66.1.1"
pandera = "~0.7.1"  # 0.8 breaks us
typing-extensions = "*"
thds-adls = {path = "../../libs/adls", develop = true}
thds-core = {path = "../../libs/core", develop = true}

# optional/extras dependencies
"bourbaki.application" = {version = ">=0.10.12", optional = true}
typing-inspect = {version = ">=0.9.0", optional = true}
# `bourbaki.application` and `typing-inspect` has issues with Python>=3.9 prior to these versions
"ruamel.yaml" = {version="*",optional=true}
tabulate = {version="*",optional=true}
isort = {version="*",optional=true}
black = {version="*",optional=true}
pygraphviz = {version="*",optional=true}

[tool.poetry.group.dev.dependencies]
# type checks
mypy = "^1.0"
mypy-extensions = "^1.0"
pandas-stubs = "*"
types-pkg-resources = "*"
types-pyyaml = "*"
types-setuptools = "*"
types-tabulate = "*"
typing-inspect = "*"
# tests
pytest = "^7.2"
pytest-cov = "^4.0"
# ipython
ipykernel = "*"
ipython = "*"
jupyter = "*"
# docs
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
# data build
# CLI/code generation ("cli" extra)
"bourbaki.application" = "*"
"ruamel.yaml" = "*"
tabulate = "*"
isort = "*"
black = "*"

[tool.poetry.extras]
# support for CLI operations - code and data generation
cli = [
  "bourbaki.application",
  "ruamel.yaml", "tabulate", "isort", "black", "typing-inspect"
]
# support for visualizing computational/dependency DAGs
viz = ["pygraphviz"]

[tool.poetry.scripts]
"tabularasa" = "thds.tabularasa.__main__:main"

[tool.mono]
omit_extras = ["viz"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/TrilliantHealth/ds-monorepo"

# TOOLING CONFIG
[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "setuptools", "networkx", "pyarrow.*", "bourbaki.*", "ruamel.*", "pygraphviz",
  "pysqlite3", "typing_inspect",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# temporary fix for mypy error: Function has duplicate type signatures
# related issue: https://github.com/Azure/azure-sdk-for-python/issues/21223
module = ["azure.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not integration"]
markers = "integration"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["thds.tabularasa"]

[tool.coverage.report]
show_missing = true
